--- a/styles.css
+++ b/styles.css
@@ -366,7 +366,7 @@ p{
     z-index: -1; /*To be behind the image*/
 }
 
-/*For the text*/
+    /*For the text*/
 #about .col-right{
     width: 100%;
 }
@@ -387,8 +387,89 @@ p{
 
 
 /*--------------------Conakt Section--------------------*/
+#contact .contact{
+    flex-direction: column;
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
+#contact .contact-items{
+    width: 400px;
+}
+
+#contact .contact-items{
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
+    padding: 30px;
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0px 0px 18px 0 #0000002c;
+    transition: .3s ease box-shadow;
+}
+
+#contact .contact-item::after{
+    box-shadow: 0px 0px 5px 0 #0000002c;
+}
+
+#contact .icon{
+    width: 70px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+
+#contact .contact.info h1{
+    font-size: 2.5rem
+    font-weight: 500;
+    margin-botton: 5px;
+}
+
+#contact .contact-info h2{
+    font-size: 1.3rem;
+    line-height: 2rem;
+    font-weight: 500;
+}
 /*--------------------End of Contakt Section--------------------*/
+
+
+/*--------------------Footer Section--------------------*/
+#footer{
+    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%); /*Change*/
+}
+
+#footer .footer{
+    min-height: 200px;
+    flex-direction: column;
+    padding-top: 50px;
+    padding-bottom: 10px;
+}
+
+#footer .footer h2{ /*Look at text size*/
+    color: white; /*Change*/
+    font-weight: 500;
+    font-size: 1.8rem;
+    letter-spacing: .1rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#footer .social-icon{
+    display: flex;
+    margin-bottom: 0px;
+}
+
+    /*Icon size*/
+#footer .social-item{
+    height: 50px;
+    width: 50px;
+    margin: 0 5px;
+}
+
+/*--------------------End of Footer Section--------------------*/
 
 
 
@@ -421,3 +502,9 @@ p{
     }
 
 /*--------------------End of Keyframes--------------------*/
+
+
+
+/*--------------------Responsivness for Tablet size--------------------*/
+
+/*--------------------End of Responsivness for Tablet size--------------------*/
