--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,95 @@ p {
 
 
 
+/*-------------------------Navigation Section-------------------------*/
+#nav {
+	position: fixed;
+	z-index: 1000;
+	left: 0;
+	top: 0;
+	width: 100vw;
+	height: auto;
+}
+
+#nav .nav {
+	min-height: 8vh;
+	background-color: rgba(31, 30, 30, 0.24); /*Change*/
+	transition: 0.3s ease background-color;
+}
+
+#nav .nav-bar {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
+	height: 100%;
+	max-width: 1300px;
+	padding: 0 10px;
+}
+
+#nav .nav-list ul {
+	list-style: none;
+	position: absolute;
+	background-color: rgb(31, 30, 30); /*Change*/
+	width: 100vw;
+	height: 100vh;
+	left: 100%; /*Hiding the side menu*/
+	top: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	z-index: 1;
+	overflow-x: hidden;
+	transition: 0.5s ease left;
+}
+
+#nav .nav-list ul.active {
+	left: 0%;
+}
+#nav .nav-list ul a::after {
+	content: attr(data-after);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(0);
+	color: rgba(240, 248, 255, 0.021); /*Change*/
+	font-size: 13rem;
+	letter-spacing: 50px;
+	z-index: -1;
+	transition: 0.3s ease letter-spacing;
+}
+
+#nav .nav-list ul li:hover a::after {
+	transform: translate(-50%, -50%) scale(1);
+	letter-spacing: initial;
+}
+
+#nav .nav-list ul li:hover a {
+	color: crimson; /*Change*/
+}
+
+#nav .nav-list ul a{
+	font-size: 2.5rem;
+	font-weight: 500;
+	letter-spacing: .2rem;
+	text-decoration: none;
+	color: white; /*Change*/
+	text-transform: uppercase;
+	padding: 20px;
+	display: block;
+}
+
+	/*Logo image*/
+#nav .brand{
+	display: flex;
+	height: 100px;
+}
+
+/*-------------------------End of Navigation Secton-------------------------*/
+
+
+
 /*-------------------------Header Section-------------------------*/
 #header {
 	background-image: url(); /*NOT SET*/
@@ -447,6 +536,12 @@ p {
 	padding-bottom: 10px;
 }
 
+	/*Logo image*/
+#footer .brand{
+	display: flex;
+	height: 100px;
+}
+
 #footer h2 { /*Look at the text size*/
 	color: white; /*Change*/
 	font-weight: 500;
@@ -513,6 +608,7 @@ p {
 		font-size: 6rem;
 	}
 
+	
 	/*----------Header Section----------*/
 	#header h1 {
 		font-size: 7rem;
@@ -636,10 +732,36 @@ p {
 
 /*--------------------Responsivness for Desktop size-------------------------*/
 @media only screen and (min-width: 1200px) {
+	/*----------Navigation Section----------*/
+	#nav .nav-list ul{
+		position: initial;
+		display: block;
+		height: auto;
+		width: fit-content;
+		background-color: transparent;
+	}
+
+	#nav .nav-list ul li{
+		display: inline-block;
+	}
+
+	#nav .nav-list ul li a{
+		font-size: 1.8rem;
+	}
+
+	#nav .nav-list ul a::after{
+		display: none;
+	}
+
+	/*----------Skills Section----------*/
 	#skills .skills-bottom .skills-item {
 		flex-basis: 22%;
 		margin: 1.5%;
 	}
+
+	/*----------Contact Section----------*/
+	#contact .contact-items{
+		padding: 10px;
 }
 
 /*-------------------------End of Responsivness for Desktop size-------------------------*/
