--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,7 @@ a:active {
 #nav .brand{
 	display: flex;
 	height: 100px;
+	padding-top: 1rem;
 }
 
 /*-------------------------End of Navigation Secton-------------------------*/
